fix(navigation): remove flickering

--- a/packages/navigation/src/components/SplitScreen.scss
+++ b/packages/navigation/src/components/SplitScreen.scss
@@ -48,7 +48,6 @@ $color-grey: #bfbfbf;
   .highlight {
     background-color: rgba(coral, 0.2);
     color: coral;
-    font-weight: bold;
 
     .clause {
       display: none;
